# restic-wrapper-rs

./: .gitignore  Cargo.toml  README.md  repos-sample.yaml
src/: command.rs  config.rs  lib.rs  main.rs  snapshots.rs
