[package]
name = "restic-rs"
version = "0.1.4"
edition = "2021"
authors =  ["Mike Lloyd"]
description = "A wrapper for restic allowing repos and backup jobs to be configured with a yaml configuration file. Written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.2", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
