[package]
name = "restic-rs"
version = "0.1.10"
edition = "2021"
authors = ["Mike Lloyd"]
description = "A wrapper for restic allowing repos and backup jobs to be configured with a yaml configuration file. Written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
dotenvy = "0.15.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.8.26"
